deploy/us-005-repuestos/phase4/objects/GQ_Lead_Repuestos_Config__mdt.object
<!--
  US-005 - Custom Metadata Type com os valores parametrizados (D-005-A/B/C).
  NUNCA hard-coded em formula: os Flows leem o registro 'Default' deste CMT.
  RepuestosLeadSource__c: valor de LeadSource que identifica linha Repuestos/PA.
    >>> ASSUNCAO a confirmar - ver flag no relatorio (qual campo/valor marca Repuestos).
-->
<CustomObject>
    <label>GQ Lead Repuestos Config</label>
    <pluralLabel>GQ Lead Repuestos Config</pluralLabel>
    <fields>
        <fullName>RecurrenceWindowDays__c</fullName>
        <label>Recurrence Window Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RepuestosLeadSource__c</fullName>
        <label>Repuestos Lead Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyGranularity__c</fullName>
        <label>Key Granularity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DominantRule__c</fullName>
        <label>Dominant Rule</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>